fix missing background on login and other big pages

--- a/app/ui/FullForm.styl
+++ b/app/ui/FullForm.styl
@@ -2,7 +2,7 @@
 	padding: 4rem 0
 	z-index: 999
 
-	background-image: url("https://myhomework.space/img/backgrounds/bg1.jpg")
+	background-image: url("/img/backgrounds/bg1.jpg")
 	background-size: cover
 
 	top: 0
